--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "clusterwork",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Process arbitrary incoming data on multiple workers",
   "main": "index.js",
   "scripts": {
     "test": "mocha test.js"
+  },
+  "engines": {
+    "node": ">=6.4.0"
   },
   "repository": {
     "type": "git",
