--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ deploy:
   on:
     branch: master
     tags: true
-    condition: "$TRAVIS_TAG =~ ^release.*$"
+condition: "$TRAVIS_TAG =~ ^(v\\d\\.\\d\\.\\d)(-\\w+)?$"
